# LiteGrave

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
conf/: config.yaml
data/labeled_data/: label_rag.csv
src/: app.py  create_csv.py  extract_device.py  extract_method_section.py  index_columns.py  index_csv_columns.py  preprocess_pdfs.py  style.css  text.py  utils.py  utils_llm.py
