[tool.poetry]
name = "litegrave"
version = "0.1.0"
description = ""
authors = ["Alireza <alireza.kashanipour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"
watchdog = "^3.0.0"
loguru = "^0.7.2"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
